# wmar

./: .gitignore  README.md  finetune.py  generate.py  precompute_imagenet_codes.py  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
assets/: chameleon_all_ids.txt  chameleon_patched_config.yaml  clustering_greenlist_ids.txt  coco_prompts_1k.txt  coco_prompts_5k.txt  imagenet_512_split_50k.txt  vqgan_alive_ids.txt
configs/: chameleon_ft.json  chameleon_generate.json  rar_ft.json  rar_generate.json  taming_ft.json  taming_generate.json  taming_generate.sh
logs/: 0620_taming_ft_stdout.txt
notebooks/: analyze.ipynb  colab.ipynb
syncseal/: README.md  pyproject.toml  train_sync.py
syncseal/configs/: all_augs.yaml  embedder.yaml  extractor.yaml
syncseal/configs/datasets/: your-dataset.yaml
syncseal/notebooks/: nb_utils.py  standalone.ipynb
syncseal/syncseal/augmentation/: __init__.py  augmenter.py  geometricunified.py  masks.py  valuemetric.py
syncseal/syncseal/data/: datasets.py  loader.py  transforms.py
syncseal/syncseal/evals/: baselines.py  eval_sync.py  eval_wm.py  metrics.py
syncseal/syncseal/losses/: perceptual.py  sync_loss.py
syncseal/syncseal/models/: __init__.py  blender.py  embedder.py  extractor.py  scripted.py  sync_model.py  wam_sync.py
syncseal/syncseal/modules/: __init__.py  convnext.py  discriminator.py  head.py  jnd.py  pixel_decoder.py  unet.py  vae.py  vit.py
syncseal/syncseal/utils/: __init__.py  cfg.py  dist.py  helpers.py  logger.py
wmar/augmentations/: diffpure.py  (+4 more)
wmar_audio/: README.md  requirements.txt
(+43 files in other folders)
